# freecc

./: AGENTS.md  README.md  freecc.ts  freecc.user.js  package.json  prompt.md  pyproject.toml  tsconfig.json  tsconfig.userscript.json
src/: index.ts  prompt.ts  system.ts  tool.ts
src/cc/: __init__.py  agent.py  chat.py  check.py  parser.py  prompt.py  tool.py
src/cc/tools/: __init__.py  glob.py  grep.py  patch.py  read.py  shell.py  write.py
src/tools/: glob.ts  patch.ts  read.ts  shell.ts  write.ts
