[project]
name = "cc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "json-five>=1.1.2",
    "rich>=14.3.3",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["uv_build >= 0.10.7, <0.11.0"]
build-backend = "uv_build"

[project.scripts]
cc = "cc:main"
